--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,9 @@
 .playfair {
     font-family: 'Playfair Display', sans-serif;
 }
+#tsparticles {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
