--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=B612+Mono:ital,wght@0,400;0,700;1,400&family=Playfair+Display&display=swap');
-
+::selection {
+    background-color: #15803d;
+    color:white;
+}
 .mono {
     font-family: 'B612 Mono', monospace;
 }
